--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="lista.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
