--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -112,7 +112,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="aranceles.h" />
+    <ClInclude Include="contenedor.h" />
     <ClInclude Include="contenedorCursos.h" />
+    <ClInclude Include="contenedores.h" />
     <ClInclude Include="contenedorEscuelas.h" />
     <ClInclude Include="contenedorEstudiantes.h" />
     <ClInclude Include="contenedorProfesores.h" />
@@ -133,6 +135,7 @@
     <ClInclude Include="interfazUniversidad.h" />
     <ClInclude Include="lista.h" />
     <ClInclude Include="nodo.h" />
+    <ClInclude Include="objetoBase.h" />
     <ClInclude Include="persona.h" />
     <ClInclude Include="profesor.h" />
     <ClInclude Include="universidad.h" />
@@ -163,6 +166,7 @@
     <ClCompile Include="nodoCursos.cpp" />
     <ClCompile Include="nodoEscuelas.cpp" />
     <ClCompile Include="nodoProfesores.cpp" />
+    <ClCompile Include="objetoBase.cpp" />
     <ClCompile Include="persona.cpp" />
     <ClCompile Include="profesor.cpp" />
     <ClCompile Include="universidad.cpp" />
