--- a/Matricula/Matricula/Matricula.vcxproj
+++ b/Matricula/Matricula/Matricula.vcxproj
@@ -111,6 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="addBehavior.h" />
     <ClInclude Include="aranceles.h" />
     <ClInclude Include="contenedor.h" />
     <ClInclude Include="contenedorCursos.h" />
@@ -141,6 +142,7 @@
     <ClInclude Include="vector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="addBehavior.cpp" />
     <ClCompile Include="aranceles.cpp" />
     <ClCompile Include="contenedorCursos.cpp" />
     <ClCompile Include="contenedorEscuelas.cpp" />
