--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="estudianteNacional.h">
       <Filter>Header Files\Estudiantes</Filter>
     </ClInclude>
+    <ClInclude Include="addBehavior.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -220,6 +223,9 @@
     </ClCompile>
     <ClCompile Include="grupoCurso.cpp">
       <Filter>Source Files\Cursos</Filter>
+    </ClCompile>
+    <ClCompile Include="addBehavior.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
