--- a/Matricula/Matricula/Matricula.vcxproj.filters
+++ b/Matricula/Matricula/Matricula.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="grupo.h">
       <Filter>Header Files\Estudiantes</Filter>
     </ClInclude>
+    <ClInclude Include="matricula.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -216,6 +219,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="vector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="matricula.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
